# erpgold

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
erpgold/: barcode.py  hooks.py  modules.txt  serial_no_data.py
erpgold/config/: desktop.py  docs.py
erpgold/erpgold/doctype/daily_metal_rate/: daily_metal_rate.json  daily_metal_rate.py
erpgold/erpgold/doctype/design/: design.js  design.json  design.py  test_design.py
erpgold/erpgold/doctype/gold_ledger/: gold_ledger.js  gold_ledger.json  gold_ledger.py  test_gold_ledger.py
erpgold/erpgold/doctype/gold_scheme/: gold_scheme.js  gold_scheme.json  gold_scheme.py  test_gold_scheme.py
erpgold/erpgold/doctype/gold_scheme_allocation/: gold_scheme_allocation.js  gold_scheme_allocation.json  gold_scheme_allocation.py  test_gold_scheme_allocation.py
erpgold/erpgold/doctype/metal_rate/: metal_rate.js  metal_rate.json  metal_rate.py  test_metal_rate.py
erpgold/erpgold/doctype/metal_type/: metal_type.js  metal_type.json  metal_type.py  test_metal_type.py
erpgold/erpgold/doctype/not_in_stock/: not_in_stock.json  not_in_stock.py
erpgold/erpgold/doctype/purity/: purity.js  purity.json  purity.py  test_purity.py
erpgold/erpgold/doctype/scheme_type/: scheme_type.js  scheme_type.json  scheme_type.py  test_scheme_type.py
erpgold/fixtures/: custom_field.json  serial_no.json
erpgold/public/: build.json  data.py
erpgold/public/js/: barcode_scan.js  delivery_note.js  purchase_invoice.js  purchase_order.js  purchase_receipt.js  sales_invoice_item.js  sales_order.js  serial_no.js  stock_entry.js
(+13 files in other folders)
